# blog

./: README.md
2025_06_03_fastapi_with_scheduler_for_python/: README.md  main.py  pyproject.toml
2025_06_03_fastapi_with_scheduler_for_python/reminder_ai/: README.md  __main__.py  pyproject.toml
2025_06_03_fastapi_with_scheduler_for_python/reminder_ai/api/v1/: __init__.py  reminders.py  status.py
2025_06_03_fastapi_with_scheduler_for_python/reminder_ai/reminder_ai/: __main__.py  main.py  scheduler.py
2025_06_03_fastapi_with_scheduler_for_python/reminder_ai/reminder_ai/api/: __init__.py
2025_06_03_fastapi_with_scheduler_for_python/reminder_ai/reminder_ai/api/v1/: for_the_lazy.py  status.py
2025_06_03_fastapi_with_scheduler_for_python/sales_ai/: __main__.py  main.py
2025_06_03_fastapi_with_scheduler_for_python/sales_ai/api/: __init__.py
2025_06_03_fastapi_with_scheduler_for_python/sales_ai/api/v1/: __init__.py  health.py  messages.py  reminders.py  status.py
2025_07_28_python_docker_images_with_uv/restapipy/: Dockerfile  README.md  pyproject.toml
2025_07_28_python_docker_images_with_uv/restapipy/src/restapipy/: __init__.py  __main__.py  main.py
